# ai-disco

./: README.md
Initialization/: Initialization.ipynb
Initialization/.ipynb_checkpoints/: Initialization (1)-checkpoint.ipynb
Optimization/: Optimization_methods_v1b.ipynb
Optimization/.ipynb_checkpoints/: Optimization_methods_v1b-checkpoint.ipynb
Regularizarion/: Regularization_v2a.ipynb
Regularizarion/.ipynb_checkpoints/: Regularization_v2a-checkpoint.ipynb
Sequence Models/w1/Building a Recurrent Neural Network - Step by Step/: Building_a_Recurrent_Neural_Network_Step_by_Step_v3b.ipynb copy
Sequence Models/w1/Dinosaur Island -- Character-level language model/: Dinosaurus_Island_Character_level_language_model_final_v3b.ipynb
Sequence Models/w1/Jazz improvisation with LSTM/: Improvise+a+Jazz+Solo+with+an+LSTM+Network+-+v3.ipynb  Improvise_a_Jazz_Solo_with_an_LSTM_Network_v3a.ipynb
Time_Series_Analysis/: Time_Series_Nifty_Bajaj_deploy.ipynb
Time_Series_Analysis/.ipynb_checkpoints/: MyTimeSeriesTest-checkpoint.ipynb
a2a/my-project/: pyproject.toml
a2a/my-project/src/my_project/: __init__.py  agent.py
acp/my_acp_project/: agent.py  client.py  pyproject.toml
cnn/autonomous_driving/Car detection for Autonomous Driving/: Autonomous_driving_application_Car_detection_v3a_Completed.ipynb
cnn/convNet/: Convolution_model_Step_by_Step_v2a_completed.ipynb
cnn/residual_networks/KerasTutorial/: Keras_Tutorial_v2a_completed.ipynb
gan/c1/: protein_gan.ipynb
learning/: tensor_flow_tutorial.ipynb  tensorflow_transfer_learning.ipynb
(+20 files in other folders)
